[REFACTOR] replace generic wildcards, modernize streams, and add proper logging